--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,7 @@ services:
     build: .
     container_name: xmrig-auto
     restart: unless-stopped
+    ports:
+      - "8080:8080"
     env_file:
       - .env
